deps/src/cmake-3.13.4/Tests/RunCMake/Syntax/CMP0053-WARN-stderr.txt
^CMake Warning \(dev\) at CMP0053-WARN.cmake:2 \(message\):
  Policy CMP0053 is not set: Simplify variable reference and escape sequence
  evaluation.  Run "cmake --help-policy CMP0053" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  For input:

    '\\'

  the old evaluation rules produce:

    '\\'

  but the new evaluation rules produce an error:

    Syntax error in cmake code at
      .*/Tests/RunCMake/Syntax/CMP0053-WARN.cmake:2
    when parsing string
      \\
    Invalid character escape '\\' \(at end of input\).

  Using the old result for compatibility since the policy is not set.
Call Stack \(most recent call first\):
  CMP0053-WARN.cmake:5 \(escape\)
  CMakeLists.txt:3 \(include\)
This warning is for project developers.  Use -Wno-dev to suppress it.

\\$
